--- a/public/css/owl.video.play.html
+++ b/public/css/owl.video.play.html
@@ -1,7 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head>
+<html>
+<!-- Mirrored from www.spaworlduae.com/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 26 Jun 2021 07:01:13 GMT -->
+<head>
 <title>404 Not Found</title>
 </head><body>
 <h1>Not Found</h1>
 <p>The requested URL /html/css/owl.video.play.png was not found on this server.</p>
-</body></html>
+</body>
+<!-- Mirrored from www.spaworlduae.com/css/owl.video.play.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 26 Jun 2021 07:01:13 GMT -->
+</html>
